# rust-compress-service

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  test_compression.rs
src/: lib.rs  main.rs
src/api/: routes.rs
src/api/handlers/: health.rs  image.rs  items.rs  mod.rs
src/core/: config.rs  mod.rs
src/core/database/: connection.rs  mod.rs  operations.rs
src/core/models/: app_state.rs  image.rs  item.rs  mod.rs
src/docs/: openapi.rs
src/services/: admin.rs  image.rs  mod.rs
src/utils/: errors.rs  mod.rs
