[package]
name = "rust_compress_api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust_compress_api"
path = "src/main.rs"

[[bin]]
name = "admin"
path = "src/bin/admin.rs"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.15"
dotenvy = "0.15.7"
image = "0.25.4"
postgres-types = { version = "0.2.9", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.13"
tokio-postgres-rustls = "0.13.0"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-scalar = "0.3.0"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
